LicensingFO alignment fixes

--- a/css/src/licensingfo.css
+++ b/css/src/licensingfo.css
@@ -175,6 +175,11 @@
     cursor: pointer;
     border-bottom: 1px solid #e7e7e7;
 }
+/* Add margins to the KB content that is expanded */ 
+.platformlicensingfo-espace .web-expanded + div {
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
 
 .platformlicensingfo-espace .EnvironmentDescription {
     background-color: #eceff1;
